--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,19 +2,21 @@
 #
 # Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2.1
+
 orbs:
-  helm: banzaicloud/helm@v0.0.3
+  helm: banzaicloud/helm@0.0.4
 
 workflows:
-  helm-chart-lint:
+  version: 2
+
+  helm-chart:
     jobs:
       - helm/lint-chart:
           charts-dir: charts
           filters:
             tags:
               ignore: /.*/
-  helm-chart-release:
-    jobs:
+
       - helm/publish-chart:
           context: helm
           charts-dir: charts
