--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,10 @@ workflows:
       - helm/publish-chart:
           context: helm
           charts-dir: charts
+          add-extra-repositories:
+            - run: >-
+                helm repo add extra
+                https://raw.githubusercontent.com/banzaicloud/kubefed/master/charts
           filters:
             branches:
               ignore: /.*/
