--- a/charts/kubefed/requirements.yaml
+++ b/charts/kubefed/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: controllermanager
   version: 0.0.2
-  repository: https://raw.githubusercontent.com/banzaicloud/kubefed/master/charts
+  repository: https://kubernetes-charts.banzaicloud.com
   condition: controllermanager.enabled
