--- a/example/demo/dnsdomain.yaml
+++ b/example/demo/dnsdomain.yaml
@@ -1,4 +1,4 @@
-apiVersion: multiclusterdns.kubefed.k8s.io/v1alpha1
+apiVersion: multiclusterdns.kubefed.io/v1alpha1
 kind: Domain
 metadata:
   # Corresponds to <federation> in the resource records.
