--- a/example/demo/dnsservicerecord.yaml
+++ b/example/demo/dnsservicerecord.yaml
@@ -1,4 +1,4 @@
-apiVersion: multiclusterdns.kubefed.k8s.io/v1alpha1
+apiVersion: multiclusterdns.kubefed.io/v1alpha1
 kind: ServiceDNSRecord
 metadata:
   # The name of the sample service.
